[project]
name = "reyfetch"
version = "1.0.64"
description = "Web data fetch method set."
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
keywords = ["rey", "reyxbo", "fetch", "request API", "crawl Web"]
authors = [
    {name = "Rey", email = "reyxbo@163.com"}
]
dependencies = [
    "bs4",
    "fake_useragent",
    "reydb",
    "reykit",
    "selenium"
]

[project.urls]
Homepage = "https://www.reyxbo.com"
Repository = "https://github.com/reyxbo/reyfetch-py.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
