[project]
name = "reyclient"
version = "1.0.4"
description = "API request client method set."
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
keywords = ["rey", "reyxbo", "client", "request", "API"]
authors = [
    {name = "Rey", email = "reyxbo@163.com"}
]
dependencies = [
    "alibabacloud_dypnsapi20170525",
    "reydb",
    "reykit"
]

[project.urls]
Homepage = "https://www.reyxbo.com"
Repository = "https://github.com/reyxbo/reyclient-py.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
